# exercise

boggle/: CMakeLists.txt
boggle/include/boggle/: boggle.hpp
boggle/test/: test.cpp
dispatcher/: CMakeLists.txt
dispatcher/include/dispatcher/: dispatcher.hpp
dispatcher/src/: dispatcher.cpp
dispatcher/test/: test.cpp
obfuscated/: CMakeLists.txt
obfuscated/include/obfuscated/: obfuscated_string.hpp
obfuscated/test/: test.cpp
